--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
   "description": "A lazygit-style terminal UI git client built with OpenTUI, SolidJS, and Bun",
   "type": "module",
   "main": "src/index.tsx",
+  "bin": {
+    "opentui-git": "./src/index.tsx"
+  },
   "scripts": {
     "dev": "bun run src/index.tsx",
     "start": "bun run src/index.tsx",
     "build": "bun build src/index.tsx --outdir ./dist --target bun",
+    "build:binary": "bun run scripts/build-binaries.ts",
     "typecheck": "tsc --noEmit"
   },
   "keywords": [
