Address PR review feedback: improve build script robustness
- Add architecture validation with clear error messages
- Add cross-compilation warning when target differs from host
- Verify binary exists after compilation
- Capture and display stdout/stderr from compiler
- Remove unused -v flag from tar command
- Pin Bun version to 1.2.5 in workflow
- Update artifact naming to include version tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Setup Bun
         uses: oven-sh/setup-bun@v2
         with:
-          bun-version: latest
+          bun-version: 1.2.5
 
       - name: Install dependencies
         run: bun install
@@ -38,7 +38,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: opentui-git-darwin-${{ matrix.arch }}
+          name: opentui-git-${{ github.ref_name }}-darwin-${{ matrix.arch }}
           path: dist/opentui-git-v*-darwin-${{ matrix.arch }}.tar.gz
 
   release:
