Update workflow to use macos-15-intel for Intel builds
- Replace deprecated macos-13 with macos-15-intel
- macos-13 was retired by GitHub Actions on Dec 4, 2024
- macos-15-intel is supported until August 2027

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,9 +13,9 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: macos-latest     # ARM64 (M1/M2/M3)
+          - os: macos-latest     # ARM64 (M1/M2/M3/M4)
             arch: arm64
-          - os: macos-13         # Intel x64
+          - os: macos-15-intel   # Intel x64 (supported until Aug 2027)
             arch: x64
 
     runs-on: ${{ matrix.os }}
