--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "dependencies": {
     "@opentui/core": "^0.1.62",
     "@opentui/solid": "^0.1.62",
+    "@types/diff": "^7.0.2",
+    "diff": "^8.0.2",
     "shiki": "^3.20.0",
     "simple-git": "^3.30.0",
     "solid-js": "^1.9.9"
