moving files to new structure

--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
   "name": "opentui-git",
   "version": "0.1.7",
+  "private": true,
   "description": "A lazygit-style terminal UI git client built with OpenTUI, SolidJS, and Bun",
-  "type": "module",
-  "main": "src/index.tsx",
-  "bin": {
-    "opentui-git": "./src/index.tsx"
-  },
+  "workspaces": ["packages/*"],
   "scripts": {
-    "dev": "bun run src/index.tsx",
-    "start": "bun run src/index.tsx",
-    "build": "bun run scripts/build.ts",
-    "build:binary": "bun run scripts/build-binaries.ts",
-    "typecheck": "tsc --noEmit"
+    "dev": "bun run --cwd packages/core dev",
+    "dev:server": "bun run --cwd packages/core dev:server",
+    "build": "bun run build:core && bun run build:sdk",
+    "build:core": "bun run --cwd packages/core build",
+    "build:sdk": "bun run --cwd packages/sdk typecheck",
+    "build:desktop": "bun run --cwd packages/desktop tauri build",
+    "typecheck": "bun run --cwd packages/core typecheck && bun run --cwd packages/sdk typecheck",
+    "clean": "rm -rf packages/*/node_modules packages/*/dist node_modules"
   },
   "keywords": [
     "git",
@@ -25,15 +25,6 @@
   ],
   "author": "opentui-git",
   "license": "MIT",
-  "dependencies": {
-    "@opentui/core": "^0.1.65",
-    "@opentui/solid": "^0.1.65",
-    "@types/diff": "^7.0.2",
-    "diff": "^8.0.2",
-    "shiki": "^3.20.0",
-    "simple-git": "^3.30.0",
-    "solid-js": "^1.9.10"
-  },
   "devDependencies": {
     "@types/bun": "latest",
     "typescript": "^5.9.3"
