--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -3,14 +3,20 @@
   "version": "0.1.7",
   "description": "Core package: CLI, server, and TUI for opentui-git",
   "type": "module",
-  "main": "src/index.tsx",
+  "main": "src/index.ts",
+  "exports": {
+    ".": "./src/index.ts",
+    "./server": "./src/server/index.ts",
+    "./git": "./src/git/index.ts",
+    "./git/types": "./src/git/types.ts"
+  },
   "bin": {
-    "opentui-git": "./src/index.tsx"
+    "opentui-git": "./src/index.ts"
   },
   "scripts": {
-    "dev": "bun run src/index.tsx",
+    "dev": "bun run src/index.ts",
     "dev:server": "bun run src/server/index.ts",
-    "start": "bun run src/index.tsx",
+    "start": "bun run src/index.ts",
     "build": "bun run scripts/build.ts",
     "build:binary": "bun run scripts/build-binaries.ts",
     "typecheck": "tsc --noEmit"
@@ -28,6 +34,8 @@
   "license": "MIT",
   "dependencies": {
     "@elysiajs/cors": "^1.3.1",
+    "@elysiajs/eden": "^1.3.1",
+    "@opentui-git/sdk": "workspace:*",
     "@opentui/core": "^0.1.65",
     "@opentui/solid": "^0.1.65",
     "@types/diff": "^7.0.2",
