--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
   ],
   "author": "opentui-git",
   "license": "MIT",
+  "resolutions": {
+    "solid-js": "1.9.10"
+  },
   "devDependencies": {
     "@types/bun": "latest",
     "typescript": "^5.9.3"
