--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -35,14 +35,14 @@
   "dependencies": {
     "@elysiajs/cors": "^1.3.1",
     "@opentui-git/sdk": "workspace:*",
-    "@opentui/core": "^0.1.65",
-    "@opentui/solid": "^0.1.65",
+    "@opentui/core": "^0.1.67",
+    "@opentui/solid": "^0.1.67",
     "@types/diff": "^7.0.2",
     "diff": "^8.0.2",
     "elysia": "^1.3.1",
     "shiki": "^3.20.0",
     "simple-git": "^3.30.0",
-    "solid-js": "^1.9.10"
+    "solid-js": "1.9.10"
   },
   "devDependencies": {
     "@types/bun": "latest",
