--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -18,7 +18,7 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "~2",
     "@tauri-apps/plugin-process": "~2",
-    "solid-js": "^1.9.10"
+    "solid-js": "1.9.9"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
