initial setup of tauri app - got it running and starting up

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "build:sdk": "bun run --cwd packages/sdk typecheck",
     "build:binary": "bun run --cwd packages/core build:binary",
     "build:desktop": "bun run --cwd packages/desktop build",
+    "build:sidecar": "bun run --cwd packages/core build:sidecar",
+    "tauri:dev": "bun run --cwd packages/desktop tauri:dev",
+    "tauri:build": "bun run --cwd packages/desktop tauri:build",
     "typecheck": "bun run typecheck:sdk && bun run typecheck:core && bun run typecheck:desktop",
     "typecheck:core": "bun run --cwd packages/core typecheck",
     "typecheck:sdk": "bun run --cwd packages/sdk typecheck",
