--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -15,15 +15,21 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@opentui-git/core": "workspace:*",
     "@opentui-git/sdk": "workspace:*",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-shell": "~2",
     "@tauri-apps/plugin-process": "~2",
+    "shiki": "^3.0.0",
     "solid-js": "1.9.9"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
     "@types/bun": "latest",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "@tailwindcss/postcss": "^4.1.8",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.9.3",
     "vite": "^6.3.5",
     "vite-plugin-solid": "^2.11.6"
